messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
        - name: django
          image: yourdockerhubusername/django-messaging:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
