messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-green
  template:
    metadata:
      labels:
        app: django-messaging-green
    spec:
      containers:
        - name: django
          image: django-messaging:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
