messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: django-messaging-green  # switch between blue/green
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
